{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 68,
  "lineage": "23656b4f-194d-0293-77a8-7bdfa12767a7",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/4286b267-6f6c-49f8-9e44-a09da195a541/resourceGroups/sep17terraform/providers/Microsoft.Network/loadBalancers/lb-sep17/frontendIPConfigurations/PublicIPAddress",
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/4286b267-6f6c-49f8-9e44-a09da195a541/resourceGroups/sep17terraform/providers/Microsoft.Network/publicIPAddresses/lb-public-ip"
              }
            ],
            "id": "/subscriptions/4286b267-6f6c-49f8-9e44-a09da195a541/resourceGroups/sep17terraform/providers/Microsoft.Network/loadBalancers/lb-sep17",
            "location": "centralindia",
            "name": "lb-sep17",
            "resource_group_name": "sep17terraform",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.lb_public_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "lb_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4286b267-6f6c-49f8-9e44-a09da195a541/resourceGroups/sep17terraform/providers/Microsoft.Network/loadBalancers/lb-sep17/backendAddressPools/backend-pool",
            "loadbalancer_id": "/subscriptions/4286b267-6f6c-49f8-9e44-a09da195a541/resourceGroups/sep17terraform/providers/Microsoft.Network/loadBalancers/lb-sep17",
            "name": "backend-pool"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_public_ip.lb_public_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "http_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4286b267-6f6c-49f8-9e44-a09da195a541/resourceGroups/sep17terraform/providers/Microsoft.Network/loadBalancers/lb-sep17/probes/http-probe",
            "interval_in_seconds": 5,
            "loadbalancer_id": "/subscriptions/4286b267-6f6c-49f8-9e44-a09da195a541/resourceGroups/sep17terraform/providers/Microsoft.Network/loadBalancers/lb-sep17",
            "name": "http-probe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Http",
            "request_path": "/"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_public_ip.lb_public_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "http_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/4286b267-6f6c-49f8-9e44-a09da195a541/resourceGroups/sep17terraform/providers/Microsoft.Network/loadBalancers/lb-sep17/backendAddressPools/backend-pool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/4286b267-6f6c-49f8-9e44-a09da195a541/resourceGroups/sep17terraform/providers/Microsoft.Network/loadBalancers/lb-sep17/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/4286b267-6f6c-49f8-9e44-a09da195a541/resourceGroups/sep17terraform/providers/Microsoft.Network/loadBalancers/lb-sep17/loadBalancingRules/http-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/4286b267-6f6c-49f8-9e44-a09da195a541/resourceGroups/sep17terraform/providers/Microsoft.Network/loadBalancers/lb-sep17",
            "name": "http-rule",
            "probe_id": "/subscriptions/4286b267-6f6c-49f8-9e44-a09da195a541/resourceGroups/sep17terraform/providers/Microsoft.Network/loadBalancers/lb-sep17/probes/http-probe",
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_lb_backend_address_pool.lb_backend",
            "azurerm_lb_probe.http_probe",
            "azurerm_public_ip.lb_public_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4286b267-6f6c-49f8-9e44-a09da195a541/resourceGroups/sep17terraform/providers/Microsoft.Network/networkInterfaces/nic-sep17",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "192.168.50.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4286b267-6f6c-49f8-9e44-a09da195a541/resourceGroups/sep17terraform/providers/Microsoft.Network/publicIPAddresses/public-ip-sep17",
                "subnet_id": "/subscriptions/4286b267-6f6c-49f8-9e44-a09da195a541/resourceGroups/sep17terraform/providers/Microsoft.Network/virtualNetworks/vnet2/subnets/vnet1"
              }
            ],
            "location": "centralindia",
            "mac_address": "7C-ED-8D-27-1E-D4",
            "name": "nic-sep17",
            "private_ip_address": "192.168.50.10",
            "private_ip_addresses": [
              "192.168.50.10"
            ],
            "resource_group_name": "sep17terraform",
            "virtual_machine_id": "/subscriptions/4286b267-6f6c-49f8-9e44-a09da195a541/resourceGroups/sep17terraform/providers/Microsoft.Compute/virtualMachines/vm-sep17"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "nic_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/4286b267-6f6c-49f8-9e44-a09da195a541/resourceGroups/sep17terraform/providers/Microsoft.Network/loadBalancers/lb-sep17/backendAddressPools/backend-pool",
            "id": "/subscriptions/4286b267-6f6c-49f8-9e44-a09da195a541/resourceGroups/sep17terraform/providers/Microsoft.Network/networkInterfaces/nic-sep17/ipConfigurations/internal|/subscriptions/4286b267-6f6c-49f8-9e44-a09da195a541/resourceGroups/sep17terraform/providers/Microsoft.Network/loadBalancers/lb-sep17/backendAddressPools/backend-pool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/4286b267-6f6c-49f8-9e44-a09da195a541/resourceGroups/sep17terraform/providers/Microsoft.Network/networkInterfaces/nic-sep17"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_lb_backend_address_pool.lb_backend",
            "azurerm_network_interface.nic",
            "azurerm_public_ip.lb_public_ip",
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4286b267-6f6c-49f8-9e44-a09da195a541/resourceGroups/sep17terraform/providers/Microsoft.Network/networkSecurityGroups/nsg-sep17",
            "location": "centralindia",
            "name": "nsg-sep17",
            "resource_group_name": "sep17terraform",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow",
                "priority": 110,
                "protocol": "TCP",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/4286b267-6f6c-49f8-9e44-a09da195a541/resourceGroups/sep17terraform/providers/Microsoft.Network/networkSecurityGroups/nsg-sep17/securityRules/Allow-HTTP",
            "name": "Allow-HTTP",
            "network_security_group_name": "nsg-sep17",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "sep17terraform",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lb_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/4286b267-6f6c-49f8-9e44-a09da195a541/resourceGroups/sep17terraform/providers/Microsoft.Network/publicIPAddresses/lb-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.213.78.186",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "lb-public-ip",
            "resource_group_name": "sep17terraform",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/4286b267-6f6c-49f8-9e44-a09da195a541/resourceGroups/sep17terraform/providers/Microsoft.Network/publicIPAddresses/public-ip-sep17",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.213.6.54",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "public-ip-sep17",
            "resource_group_name": "sep17terraform",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.50.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4286b267-6f6c-49f8-9e44-a09da195a541/resourceGroups/sep17terraform/providers/Microsoft.Network/virtualNetworks/vnet2/subnets/vnet1",
            "name": "vnet1",
            "resource_group_name": "sep17terraform",
            "virtual_network_name": "vnet2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4286b267-6f6c-49f8-9e44-a09da195a541/resourceGroups/sep17terraform/providers/Microsoft.Network/virtualNetworks/vnet2/subnets/vnet1",
            "network_security_group_id": "/subscriptions/4286b267-6f6c-49f8-9e44-a09da195a541/resourceGroups/sep17terraform/providers/Microsoft.Network/networkSecurityGroups/nsg-sep17",
            "subnet_id": "/subscriptions/4286b267-6f6c-49f8-9e44-a09da195a541/resourceGroups/sep17terraform/providers/Microsoft.Network/virtualNetworks/vnet2/subnets/vnet1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "80ba3352-fee0-43ab-baba-305aa7b0712c",
            "id": "/subscriptions/4286b267-6f6c-49f8-9e44-a09da195a541/resourceGroups/sep17terraform/providers/Microsoft.Network/virtualNetworks/vnet2",
            "location": "centralindia",
            "name": "vnet2",
            "resource_group_name": "sep17terraform",
            "subnet": [
              {
                "address_prefix": "192.168.50.0/24",
                "id": "/subscriptions/4286b267-6f6c-49f8-9e44-a09da195a541/resourceGroups/sep17terraform/providers/Microsoft.Network/virtualNetworks/vnet2/subnets/vnet1",
                "name": "vnet1",
                "security_group": "/subscriptions/4286b267-6f6c-49f8-9e44-a09da195a541/resourceGroups/sep17terraform/providers/Microsoft.Network/networkSecurityGroups/nsg-sep17"
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}